--- a/Midterm_report/Midterm_report.tex
+++ b/Midterm_report/Midterm_report.tex
@@ -91,6 +91,7 @@ We first decided to used the Python Code to examine the arc index.
 For this, we found the method classifying theta-curve and handcuff graphs by Cromwell matrix.
 Finding all possible matrices for those graphs and finding out the Yamada polynomial of each graphs could give the minimal arc index of the graph, but the Topoly library of the Python did not work, so we could not examine the Yamada polynomial.
 So, we found out the smallest Cromwell matrix by hand with using the bounds of the arc index, and used the Python Code to examine if we found the right Cromwell matrices.
+Then we tried to decrease the gap of upper and lower bounds, and found out arc indices of some graphs.
 
 \section{Theoretical Background}
 The \textit{link with $n$-components} is an embedding of the disjoint union of $n$ circles $S^1 \cup \cdots \cup S^1$ in $\mathbb{R}^3$. $1$-component link is called a \textit{knot}. The $\theta$-curve 아귀찮아 이건 나중에\\
